@@ -153,9 +153,8 @@
     </div>
     <div id='previousversion'></div>
     <script>
-        //remove me when we hit production
-        //display link to previous version if available
-        UI.displayLinkToPreviousVersion('previousversion');
+        //display development info only if the dev file exists
+        UI.showDevInfo('version','previousversion');
     </script>
 </body>
 </html>
